# KWIC

./: .gitignore  CMakeLists.txt  README.md  kwic.cpp  kwic.hpp  linerotation.cpp  linerotation.hpp  main.cpp  split.cpp  split.hpp
build-KWIC-Clang64-Default/: CMakeCache.txt  KWIC  KWIC.cbp  cmake_install.cmake
